added placeholder text for timer, set display for sections to begin

--- a/index.html
+++ b/index.html
@@ -6,21 +6,22 @@
 
 <body>
     <header>
-
+        <h3>timer goes here</h3>
     </header>
 
     <main>
-        <section class="start">
+        <section class="start" style="display: null">
             <h2>start</h2>
         </section>
 
-        <section class="quiz">
+        <section class="quiz" style="display: none">
             <h2>quiz</h2>
         </section>
 
-        <section class="end-screen">
+        <section class="end-screen" style="display: none">
             <h2>end screen</h2>
         </section>
 
     </main>
+    <script src="./assets/js/script.js"></script>
 </body>
