began working on js to change style display properties

--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
     </header>
 
     <main>
-        <section class="start" style="display: null">
+        <section id="start" style="display: null">
             <h2>start</h2>
         </section>
 
-        <section class="quiz" style="display: none">
+        <section id="quiz" style="display: none">
             <h2>quiz</h2>
         </section>
 
-        <section class="end-screen" style="display: none">
+        <section id="end-screen" style="display: none">
             <h2>end screen</h2>
         </section>
 
