added 'start quiz' button in index.html, added eventlistener in js to navigate to quiz.html on button press

--- a/index.html
+++ b/index.html
@@ -10,16 +10,8 @@
     </header>
 
     <main>
-        <section id="start" style="display: null">
-            <h2>start</h2>
-        </section>
-
-        <section id="quiz" style="display: none">
-            <h2>quiz</h2>
-        </section>
-
-        <section id="end-screen" style="display: none">
-            <h2>end screen</h2>
+        <section style="display: null">
+            <button id="startButton">Click to start the quiz!</button>
         </section>
 
     </main>
