added countdown timer before quiz starts, initiated by clicking start button. changes to quiz.html when counter reaches 0

--- a/end-screen.html
+++ b/end-screen.html
@@ -12,7 +12,7 @@
     <main>
 
         <section id="end-screen" style="display: none">
-            <h2>end screen</h2>
+            <h2>high scores:</h2>
         </section>
 
     </main>
