--- a/index.html
+++ b/index.html
@@ -10,8 +10,11 @@
     </header>
 
     <main>
-        <section style="display: null">
+        <section display = "null">
             <button id="startButton">Click to start the quiz!</button>
+        </section>
+        <section display = "none">
+            <h2 id="countdownTimer"></h2>
         </section>
 
     </main>
