fixed script.js startButton eventlistener .children[]

--- a/index.html
+++ b/index.html
@@ -5,15 +5,11 @@
 </head>
 
 <body>
-    <header>
-        <h3>timer goes here</h3>
-    </header>
-
     <main>
-        <section display = "null">
+        <section style="display:null">
             <button id="startButton">Click to start the quiz!</button>
         </section>
-        <section display = "none">
+        <section style="display: none">
             <h2 id="countdownTimer"></h2>
         </section>
 
