began quizLogic.js, replacing .textContent with objects from an array in quiz.html

--- a/end-screen.html
+++ b/end-screen.html
@@ -1,4 +1,6 @@
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width", initial-scale="1.0">
     <title>Javascript Powered Quiz</title>
     <link rel="stylesheet" href="https://cdn.simplecss.org/simple.min.css">
     <link rel="stylesheet" href="./assets/css/style.css">
@@ -11,9 +13,12 @@
 
     <main>
 
-        <section id="end-screen" style="display: none">
+        <div id="end-screen" style="display: null">
             <h2>high scores:</h2>
-        </section>
+            <p><h3>first</h3></p>
+            <p><h3>second</h3></p>
+            <p><h3>third</h3></p>
+        </div>
 
     </main>
     <script src="./assets/js/script.js"></script>
