--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width", initial-scale="1.0">
     <title>Javascript Powered Quiz</title>
     <link rel="stylesheet" href="https://cdn.simplecss.org/simple.min.css">
     <link rel="stylesheet" href="./assets/css/style.css">
@@ -6,7 +8,7 @@
 
 <body>
     <main>
-        <section style="display:null">
+        <section style="display: null">
             <button id="startButton">Click to start the quiz!</button>
         </section>
         <section style="display: none">
