--- a/quiz.html
+++ b/quiz.html
@@ -1,4 +1,6 @@
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width", initial-scale="1.0">
     <title>Javascript Powered Quiz</title>
     <link rel="stylesheet" href="https://cdn.simplecss.org/simple.min.css">
     <link rel="stylesheet" href="./assets/css/style.css">
@@ -11,10 +13,15 @@
 
     <main>
 
-        <section id="quiz" style="display: none">
-            <h2>quiz</h2>
-        </section>
+        <div id="quizQ"></div>
+            <ul>
+                <li class="options"></li>
+                <li class="options"></li>
+                <li class="options"></li>
+                <li class="options"></li>
+            </ul>
 
     </main>
-    <script src="./assets/js/script.js"></script>
+    <script src="./assets/js/quizLogic.js"></script>
 </body>
+
