added console.log and score variable in quizLogic.js

--- a/end-screen.html
+++ b/end-screen.html
@@ -19,6 +19,7 @@
             <p><h3>second</h3></p>
             <p><h3>third</h3></p>
         </div>
+        <button id="playAgainButton">Click to play again</button>
 
     </main>
     <script src="./assets/js/script.js"></script>
