restarted writing quizLogic.js

--- a/quiz.html
+++ b/quiz.html
@@ -14,11 +14,11 @@
     <main>
 
         <div id="quizQ"></div>
-            <ul>
-                <li class="options"></li>
-                <li class="options"></li>
-                <li class="options"></li>
-                <li class="options"></li>
+            <ul id="answerOptions">
+                <li id="opt1" class="options"></li>
+                <li id="opt2" class="options"></li>
+                <li id="opt3" class="options"></li>
+                <li id="opt4" class="options"></li>
             </ul>
         
 
