added feedback text for correct/incorrect answers. added .mp3 for sound feedback not yet implemented

--- a/quiz.html
+++ b/quiz.html
@@ -8,7 +8,8 @@
 
 <body>
     <header>
-        <h3>timer goes here</h3>
+        <h3 id="scoreCounter"></h3>
+
     </header>
 
     <main>
@@ -20,6 +21,12 @@
                 <li id="opt3" class="options"></li>
                 <li id="opt4" class="options"></li>
             </ul>
+
+        <div id="answerFeedback"></div>    
+
+        <div id="leaderboard" style="display: none">
+            <h2>test</h2>
+        </div>    
         
 
     </main>
