added styling/animation for hovering over li in quiz

--- a/quiz.html
+++ b/quiz.html
@@ -24,10 +24,15 @@
 
         <div id="answerFeedback"></div>    
 
-        <div id="leaderboard" style="display: none">
-            <h2>test</h2>
+        <div id="enterName" style="display: none">
+            <h3>Enter your name for the leaderboard!</h2>
+            <form action="">
+                <input type="text" id="fname" name="fname" value="">
+                <input type="submit" value="Submit">
+            </form>
         </div>    
         
+
 
     </main>
     <script src="./assets/js/quizLogic.js"></script>
