--- a/quiz.html
+++ b/quiz.html
@@ -26,9 +26,9 @@
 
         <div id="enterName" style="display: none">
             <h3>Enter your name for the leaderboard!</h2>
-            <form action="">
+            <form id="name-form" action="">
                 <input type="text" id="fname" name="fname" value="">
-                <input type="submit" value="Submit">
+                <input type="submit" id="submit" value="Submit">
             </form>
         </div>    
         
