set up local storage for object

--- a/end-screen.html
+++ b/end-screen.html
@@ -22,5 +22,5 @@
         <button id="playAgainButton">Click to play again</button>
 
     </main>
-    <script src="./assets/js/script.js"></script>
+    <script src="./assets/js/endscreen.js"></script>
 </body>
