--- a/quiz.html
+++ b/quiz.html
@@ -27,10 +27,13 @@
         <div id="enterName" style="display: none">
             <h3>Enter your name for the leaderboard!</h2>
             <form id="name-form" action="">
-                <input type="text" id="fname" name="fname" value="">
+                <input type="text" id="fname" name="fname">
                 <input type="submit" id="submit" value="Submit">
             </form>
         </div>    
+
+
+        </div>
         
 
 
