pulled data from local storage, parsed data, sorted data, made for loop to add li for each key value pair

--- a/end-screen.html
+++ b/end-screen.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width", initial-scale="1.0">
@@ -15,9 +16,9 @@
 
         <div id="end-screen" style="display: null">
             <h2>high scores:</h2>
-            <p><h3>first</h3></p>
-            <p><h3>second</h3></p>
-            <p><h3>third</h3></p>
+            <ol id="highScoreOl">
+            
+            </ol>
         </div>
         <button id="playAgainButton">Click to play again</button>
 
