--- a/end-screen.html
+++ b/end-screen.html
@@ -8,19 +8,17 @@
 </head>
 
 <body>
-    <header>
-        <h3>timer goes here</h3>
-    </header>
 
     <main>
 
-        <div id="end-screen" style="display: null">
-            <h2>high scores:</h2>
-            <ol id="highScoreOl">
+        <div id="end-screen">
+            <h3>Name | Score</h3>
+            <div id="highScoreOl">
             
-            </ol>
+            </div>
+            <button id="playAgainButton">Click to play again</button>
+
         </div>
-        <button id="playAgainButton">Click to play again</button>
 
     </main>
     <script src="./assets/js/endscreen.js"></script>
