added localStorage.clear on leaderboard:

--- a/end-screen.html
+++ b/end-screen.html
@@ -14,9 +14,9 @@
         <div id="end-screen">
             <h3>Name | Score</h3>
             <div id="highScoreOl">
-            
             </div>
             <button id="playAgainButton">Click to play again</button>
+            <p id="clearHighScores">clear high scores</p>
 
         </div>
 
