--- a/quiz.html
+++ b/quiz.html
@@ -8,7 +8,8 @@
 </head>
 
 <body>
-    <header>
+    <header id="timescoreCounter">
+        <h3 id="timeCounter">Time left: 30s</h3>
         <h3 id="scoreCounter"></h3>
 
     </header>
