--- a/quiz.html
+++ b/quiz.html
@@ -30,7 +30,7 @@
             <h3>Enter your name for the leaderboard!</h2>
             <form id="name-form" action="">
                 <input type="text" id="fname" name="fname">
-                <input type="submit" id="submit" value="Submit">
+                <button type="submit" id="submit" value="Submit">Submit</button>
             </form>
         </div>    
 
