added time loss on incorrect answer

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width", initial-scale="1.0">
     <title>Javascript Powered Quiz</title>
-    <link rel="stylesheet" href="https://cdn.simplecss.org/simple.min.css">
+    <!-- <link rel="stylesheet" href="https://cdn.simplecss.org/simple.min.css"> -->
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 
@@ -14,7 +14,7 @@
             <h3>Here's how it works:</h3>
             <ul>
                 <li>Correct answers give you 5 points</li>
-                <li>Incorrect answers remove 4 points</li>
+                <li>Incorrect answers remove 4 points AND reduce your time left by 5 seconds</li>
                 <li>The quiz ends when the timer runs out or you answer all the questions</li>
                 <li>Click the start button to begin!</li>
             </ul>
